@@ -1,5 +1,9 @@
 2003-11-10  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* win/tkWinDraw.c (XFillRectangles): correctly handle the
+	XGCValues.function parameter when filling rectangles.
+	[Bug #820278] [Patch #820282]
+
 	* win/configure:
 	* win/configure.in: define TK_LIB_FLAG, TK_LIB_SPEC,
 	TK_BUILD_LIB_SPEC, TK_STUB_LIB_SPEC, TK_STUB_LIB_PATH, and
